src/Assignment 7/objects/API_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API Endpoint</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>API Setting</label>
    <pluralLabel>API Settings</pluralLabel>
</CustomObject>